menu transit active

--- a/src/index.html
+++ b/src/index.html
@@ -33,11 +33,18 @@
    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
 </head>
 <body class="sidebar-mini skin-green-light">
-    <style *ngIf="window.location.href.indexOf('login')>-1">
+    <!-- <style *ngIf="window.location.href.indexOf('login')>-1">
         html, body{
        background-color: #00a65a!important;
       }
    </style>
+       <style *ngIf="window.location.href.indexOf('login')==-1">
+          html, body{
+            background-color: #fff;
+        }
+     </style> -->
+
+
   <app-root>
     <div class="wrapper">
 
@@ -53,14 +60,14 @@
 <!-- AdminLTE App -->
 <script src="assets/dist/js/adminlte.min.js"></script>
 <!-- Sparkline -->
-<script src="assets/bower_components/jquery-sparkline/dist/jquery.sparkline.min.js"></script>
+<!-- <script src="assets/bower_components/jquery-sparkline/dist/jquery.sparkline.min.js"></script> -->
 <!-- SlimScroll -->
-<script src="assets/bower_components/jquery-slimscroll/jquery.slimscroll.min.js"></script>
+<!-- <script src="assets/bower_components/jquery-slimscroll/jquery.slimscroll.min.js"></script> -->
 <!-- ChartJS -->
 <script src="assets/bower_components/chart.js/Chart.js"></script>
 <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
 <script src="assets/dist/js/pages/dashboard2.js"></script>
 <!-- AdminLTE for demo purposes -->
-<script src="assets/dist/js/demo.js"></script>
+<!-- <script src="assets/dist/js/demo.js"></script> -->
 </body>
 </html>
