--- a/src/index.html
+++ b/src/index.html
@@ -69,5 +69,20 @@
 <script src="assets/dist/js/pages/dashboard2.js"></script>
 <!-- AdminLTE for demo purposes -->
 <!-- <script src="assets/dist/js/demo.js"></script> -->
+
+<script src="https://www.gstatic.com/firebasejs/5.2.0/firebase.js"></script>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyDv6htNozvUW9O8fJZJfHwHb7hahwEjaws",
+    authDomain: "fixticket-cd8b4.firebaseapp.com",
+    databaseURL: "https://fixticket-cd8b4.firebaseio.com",
+    projectId: "fixticket-cd8b4",
+    storageBucket: "fixticket-cd8b4.appspot.com",
+    messagingSenderId: "1079142151917"
+  };
+  firebase.initializeApp(config);
+</script>
+
 </body>
 </html>
