--- a/src/index.html
+++ b/src/index.html
@@ -1,39 +1,43 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>FixTicket</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-   <!-- Tell the browser to be responsive to screen width -->
-   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-   <!-- Bootstrap 3.3.7 -->
-   <link rel="stylesheet" href="assets/bower_components/bootstrap/dist/css/bootstrap.min.css">
-   <!-- Font Awesome -->
-   <link rel="stylesheet" href="assets/bower_components/font-awesome/css/font-awesome.min.css">
-   <!-- Ionicons -->
-   <link rel="stylesheet" href="assets/bower_components/Ionicons/css/ionicons.min.css">
-   <!-- jvectormap -->
-   <link rel="stylesheet" href="assets/bower_components/jvectormap/jquery-jvectormap.css">
-   <!-- Theme style -->
-   <link rel="stylesheet" href="assets/dist/css/AdminLTE.min.css">
-   <!-- AdminLTE Skins. Choose a skin from the css/skins
+  <!-- Tell the browser to be responsive to screen width -->
+  <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+  <!-- Bootstrap 3.3.7 -->
+  <link rel="stylesheet" href="assets/bower_components/bootstrap/dist/css/bootstrap.min.css">
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="assets/bower_components/font-awesome/css/font-awesome.min.css">
+  <!-- Ionicons -->
+  <link rel="stylesheet" href="assets/bower_components/Ionicons/css/ionicons.min.css">
+  <!-- jvectormap -->
+  <link rel="stylesheet" href="assets/bower_components/jvectormap/jquery-jvectormap.css">
+  <!-- Theme style -->
+  <link rel="stylesheet" href="assets/dist/css/AdminLTE.min.css">
+  <!-- AdminLTE Skins. Choose a skin from the css/skins
         folder instead of downloading all of them to reduce the load. -->
-   <link rel="stylesheet" href="assets/dist/css/skins/_all-skins.min.css">
- 
-   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-   <!--[if lt IE 9]>
+  <link rel="stylesheet" href="assets/dist/css/skins/_all-skins.min.css">
+
+  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!--[if lt IE 9]>
    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
    <![endif]-->
- 
-   <!-- Google Font -->
-   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
+
+  <!-- Google Font -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
+  <meta name="theme-color" content="#00a65a">
+  <link rel="manifest" href="./manifest.json">
 </head>
+
 <body class="sidebar-mini skin-green-light">
-    <!-- <style *ngIf="window.location.href.indexOf('login')>-1">
+  <!-- <style *ngIf="window.location.href.indexOf('login')>-1">
         html, body{
        background-color: #00a65a!important;
       }
@@ -50,39 +54,26 @@
 
     </div>
   </app-root>
-  
-<!-- jQuery 3 -->
-<script src="assets/bower_components/jquery/dist/jquery.min.js"></script>
-<!-- Bootstrap 3.3.7 -->
-<script src="assets/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-<!-- FastClick -->
-<script src="assets/bower_components/fastclick/lib/fastclick.js"></script>
-<!-- AdminLTE App -->
-<script src="assets/dist/js/adminlte.min.js"></script>
-<!-- Sparkline -->
-<!-- <script src="assets/bower_components/jquery-sparkline/dist/jquery.sparkline.min.js"></script> -->
-<!-- SlimScroll -->
-<!-- <script src="assets/bower_components/jquery-slimscroll/jquery.slimscroll.min.js"></script> -->
-<!-- ChartJS -->
-<script src="assets/bower_components/chart.js/Chart.js"></script>
-<!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-<script src="assets/dist/js/pages/dashboard2.js"></script>
-<!-- AdminLTE for demo purposes -->
-<!-- <script src="assets/dist/js/demo.js"></script> -->
 
-<script src="https://www.gstatic.com/firebasejs/5.2.0/firebase.js"></script>
-<script>
-  // Initialize Firebase
-  var config = {
-    apiKey: "AIzaSyDv6htNozvUW9O8fJZJfHwHb7hahwEjaws",
-    authDomain: "fixticket-cd8b4.firebaseapp.com",
-    databaseURL: "https://fixticket-cd8b4.firebaseio.com",
-    projectId: "fixticket-cd8b4",
-    storageBucket: "fixticket-cd8b4.appspot.com",
-    messagingSenderId: "1079142151917"
-  };
-  firebase.initializeApp(config);
-</script>
+  <!-- jQuery 3 -->
+  <script src="assets/bower_components/jquery/dist/jquery.min.js"></script>
+  <!-- Bootstrap 3.3.7 -->
+  <script src="assets/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+  <!-- FastClick -->
+  <script src="assets/bower_components/fastclick/lib/fastclick.js"></script>
+  <!-- AdminLTE App -->
+  <script src="assets/dist/js/adminlte.min.js"></script>
+  <!-- Sparkline -->
+  <!-- <script src="assets/bower_components/jquery-sparkline/dist/jquery.sparkline.min.js"></script> -->
+  <!-- SlimScroll -->
+  <!-- <script src="assets/bower_components/jquery-slimscroll/jquery.slimscroll.min.js"></script> -->
+  <!-- ChartJS -->
+  <script src="assets/bower_components/chart.js/Chart.js"></script>
+  <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
+  <script src="assets/dist/js/pages/dashboard2.js"></script>
+  <!-- AdminLTE for demo purposes -->
+  <!-- <script src="assets/dist/js/demo.js"></script> -->
 
 </body>
+
 </html>
